# async-selector

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: extensions.rs  map.rs  speed.rs
src/: lib.rs  list.rs  mpsc.rs  pollable.rs  selector.rs  task.rs
src/list/: cursor.rs
src/selector/: borrowed.rs  ext.rs  id.rs  iter.rs  removed.rs
