[package]
name = "async-selector"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Razz4780/async-selector"
authors = ["Michał Smolarek <msmolarekg@gmail.com>"]
description = "Fast and flexible asynchronous task selector"
publish = true
keywords = ["async", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures = "0.3"

[dev-dependencies]
rstest = "0.26"
tokio = { version = "1", features = ["full"] }
